# table-img2graph

./: .bashrc  .gitignore  Dockerfile  Main.py  README.md  docker-compose.yml  example.py  extract_cell.py  process_cell.py  pyproject.toml  requirements.txt  utils.py
Table/: Cell.py
res/: sample.csv  sample_copy.csv
src/: cell_extractor.py  cell_processor.py  example.py  img2graph.py  main.py  table_img2graph.py  test.py  utils.py
src/Modules/: cell_extractor.py  cell_processor.py  table_extractor.py
src/Table/: Cell.py
